--- a/public/views/index-template.html
+++ b/public/views/index-template.html
@@ -40,6 +40,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        display: none;
       }
 
       .preloader__enter {
